--- a/index.html
+++ b/index.html
@@ -1019,6 +1019,147 @@
             transform: scale(1.05);
         }
 
+        /* Team List Styles */
+        .teams-list {
+            max-height: 350px;
+            overflow-y: auto;
+            margin-bottom: 15px;
+        }
+
+        .team-list-item {
+            background: rgba(255,255,255,0.1);
+            border-radius: 10px;
+            padding: 15px;
+            margin-bottom: 10px;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            transition: all 0.3s;
+        }
+
+        .team-list-item:hover {
+            background: rgba(255,255,255,0.15);
+        }
+
+        .team-list-item.active {
+            border: 2px solid #00b894;
+            background: rgba(0, 184, 148, 0.2);
+        }
+
+        .team-list-info {
+            display: flex;
+            align-items: center;
+            gap: 12px;
+            flex: 1;
+        }
+
+        .team-list-flag {
+            font-size: 2rem;
+        }
+
+        .team-list-details {
+            flex: 1;
+        }
+
+        .team-list-name {
+            font-weight: bold;
+            font-size: 1.1rem;
+            margin-bottom: 3px;
+        }
+
+        .team-list-desc {
+            font-size: 0.85rem;
+            opacity: 0.7;
+        }
+
+        .team-list-badge {
+            font-size: 0.75rem;
+            padding: 3px 8px;
+            border-radius: 10px;
+            margin-top: 5px;
+            display: inline-block;
+        }
+
+        .team-list-badge.public {
+            background: rgba(9, 132, 227, 0.3);
+            color: #74b9ff;
+        }
+
+        .team-list-badge.private {
+            background: rgba(253, 121, 168, 0.3);
+            color: #fd79a8;
+        }
+
+        .team-join-btn {
+            padding: 8px 20px;
+            border: none;
+            border-radius: 8px;
+            background: linear-gradient(135deg, #00b894, #00a085);
+            color: white;
+            font-weight: bold;
+            cursor: pointer;
+            transition: all 0.3s;
+        }
+
+        .team-join-btn:hover {
+            transform: scale(1.05);
+        }
+
+        .team-join-btn.active {
+            background: linear-gradient(135deg, #636e72, #4a5568);
+            cursor: default;
+        }
+
+        .team-join-btn.active:hover {
+            transform: none;
+        }
+
+        /* Country select in create team */
+        .country-select-grid {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 10px;
+            max-height: 150px;
+            overflow-y: auto;
+            padding: 5px;
+        }
+
+        .country-select-option {
+            background: rgba(255,255,255,0.1);
+            border: 2px solid transparent;
+            border-radius: 8px;
+            padding: 10px 5px;
+            cursor: pointer;
+            text-align: center;
+            transition: all 0.3s;
+        }
+
+        .country-select-option:hover {
+            background: rgba(255,255,255,0.2);
+        }
+
+        .country-select-option.selected {
+            border-color: #00b894;
+            background: rgba(0, 184, 148, 0.2);
+        }
+
+        .country-select-flag {
+            font-size: 1.5rem;
+            display: block;
+            margin-bottom: 3px;
+        }
+
+        .country-select-name {
+            font-size: 0.7rem;
+            opacity: 0.8;
+        }
+
+        .no-teams-message {
+            text-align: center;
+            padding: 30px;
+            opacity: 0.7;
+        }
+
         /* Code Modal Styles */
         .code-input-container {
             display: flex;
@@ -1746,7 +1887,7 @@
                 </button>
                 <button class="menu-btn team-btn" onclick="openModal('team')">
                     <span class="menu-btn-icon">👥</span>
-                    Team
+                    My Teams
                 </button>
             </div>
         </div>
@@ -2043,7 +2184,7 @@
     <div class="modal-overlay" id="team-modal">
         <div class="modal">
             <div class="modal-header">
-                <h2>👥 Team</h2>
+                <h2>👥 My Teams</h2>
                 <button class="close-btn" onclick="closeModal('team')">&times;</button>
             </div>
             <div id="team-content">
@@ -2062,6 +2203,12 @@
             <div class="team-form-group">
                 <label>Team Name</label>
                 <input type="text" id="team-name-input" class="team-input" placeholder="Enter team name..." maxlength="20">
+            </div>
+            <div class="team-form-group">
+                <label>Team Country</label>
+                <div class="country-select-grid" id="team-country-select">
+                    <!-- Populated by JavaScript -->
+                </div>
             </div>
             <div class="team-form-group">
                 <label>Description</label>
@@ -2113,7 +2260,8 @@
             planes: 0,
             ships: 0,
             totalPurchased: 0,
-            team: null, // { name, description, isPrivate, code }
+            teams: [], // Array of { name, description, isPrivate, code, country, flag }
+            activeTeamIndex: null, // Index of currently active team
             goldSpent: 0,
             battlesWon: 0,
             battlesLost: 0,
@@ -2313,7 +2461,8 @@
                     questsCompleted: [],
                     questLevel: 'starter',
                     redeemedCodes: [],
-                    team: null
+                    teams: [],
+                    activeTeamIndex: null
                 };
                 document.getElementById('game-screen').style.display = 'none';
                 document.getElementById('country-selection').style.display = 'flex';
@@ -2917,45 +3066,107 @@
         // Team functionality
         let selectedPrivacy = 'public';
         let generatedTeamCode = '';
+        let selectedTeamCountry = null;
+        let selectedTeamFlag = null;
+
+        // Countries for team selection
+        const teamCountries = [
+            { name: 'Spain', flag: '🇪🇸' },
+            { name: 'France', flag: '🇫🇷' },
+            { name: 'Germany', flag: '🇩🇪' },
+            { name: 'UK', flag: '🇬🇧' },
+            { name: 'Italy', flag: '🇮🇹' },
+            { name: 'Lithuania', flag: '🇱🇹' },
+            { name: 'Belgium', flag: '🇧🇪' },
+            { name: 'Poland', flag: '🇵🇱' },
+            { name: 'Netherlands', flag: '🇳🇱' },
+            { name: 'Russia', flag: '🇷🇺' },
+            { name: 'China', flag: '🇨🇳' },
+            { name: 'USA', flag: '🇺🇸' },
+            { name: 'Japan', flag: '🇯🇵' },
+            { name: 'Brazil', flag: '🇧🇷' },
+            { name: 'Canada', flag: '🇨🇦' },
+            { name: 'Australia', flag: '🇦🇺' }
+        ];
 
         // Render team modal content
         function renderTeamContent() {
             const container = document.getElementById('team-content');
 
-            if (gameState.team) {
-                // Show current team
-                container.innerHTML = `
-                    <div class="team-display">
-                        <div class="team-display-name">${gameState.team.name}</div>
-                        <div class="team-display-desc">${gameState.team.description || 'No description'}</div>
-                        <div class="team-display-info">
-                            <span class="team-display-badge ${gameState.team.isPrivate ? 'private' : 'public'}">
-                                ${gameState.team.isPrivate ? '🔒 Private' : '🌍 Public'}
-                            </span>
-                        </div>
-                        ${gameState.team.isPrivate ? `
-                        <div class="team-code-display" style="margin-top: 20px;">
-                            <p style="margin-bottom: 5px; opacity: 0.8; font-size: 0.9rem;">Team Code:</p>
-                            <div class="code">${gameState.team.code}</div>
-                        </div>
-                        ` : ''}
-                        <button class="leave-team-btn" onclick="leaveTeam()">🚪 Leave Team</button>
-                    </div>
-                `;
-            } else {
-                // Show create/join options
-                container.innerHTML = `
-                    <p style="margin-bottom: 20px; opacity: 0.8;">Create or join a team to play with friends!</p>
-                    <div class="team-options">
-                        <button class="team-option-btn create-btn" onclick="openCreateTeam()">
-                            ✨ Create Team
-                        </button>
-                        <button class="team-option-btn join-btn" onclick="openJoinTeam()">
-                            🔗 Join Team
-                        </button>
-                    </div>
-                `;
+            // Initialize teams array if not exists
+            if (!gameState.teams) {
+                gameState.teams = [];
             }
+
+            let html = '';
+
+            // Show teams list if there are teams
+            if (gameState.teams.length > 0) {
+                html += '<div class="teams-list">';
+                gameState.teams.forEach((team, index) => {
+                    const isActive = gameState.activeTeamIndex === index;
+                    html += `
+                        <div class="team-list-item ${isActive ? 'active' : ''}">
+                            <div class="team-list-info">
+                                <span class="team-list-flag">${team.flag}</span>
+                                <div class="team-list-details">
+                                    <div class="team-list-name">${team.name}</div>
+                                    <div class="team-list-desc">${team.description || 'No description'}</div>
+                                    <span class="team-list-badge ${team.isPrivate ? 'private' : 'public'}">
+                                        ${team.isPrivate ? '🔒 Private' : '🌍 Public'}
+                                    </span>
+                                    ${team.isPrivate ? `<span style="margin-left: 10px; font-size: 0.8rem; opacity: 0.7;">Code: ${team.code}</span>` : ''}
+                                </div>
+                            </div>
+                            <button class="team-join-btn ${isActive ? 'active' : ''}" onclick="${isActive ? '' : `joinTeam(${index})`}">
+                                ${isActive ? '✓ Active' : '→ Join'}
+                            </button>
+                        </div>
+                    `;
+                });
+                html += '</div>';
+            } else {
+                html += '<div class="no-teams-message">You don\'t have any teams yet.</div>';
+            }
+
+            // Show create/join buttons
+            html += `
+                <div class="team-options" style="margin-top: 15px;">
+                    <button class="team-option-btn create-btn" onclick="openCreateTeam()">
+                        ✨ Create Team
+                    </button>
+                    <button class="team-option-btn join-btn" onclick="openJoinTeam()">
+                        🔗 Join Team
+                    </button>
+                </div>
+            `;
+
+            container.innerHTML = html;
+        }
+
+        // Populate country select grid
+        function populateTeamCountrySelect() {
+            const container = document.getElementById('team-country-select');
+            container.innerHTML = teamCountries.map(country => `
+                <div class="country-select-option" onclick="selectTeamCountry('${country.name}', '${country.flag}', this)">
+                    <span class="country-select-flag">${country.flag}</span>
+                    <span class="country-select-name">${country.name}</span>
+                </div>
+            `).join('');
+        }
+
+        // Select team country
+        function selectTeamCountry(name, flag, element) {
+            selectedTeamCountry = name;
+            selectedTeamFlag = flag;
+
+            // Remove selected class from all options
+            document.querySelectorAll('.country-select-option').forEach(opt => {
+                opt.classList.remove('selected');
+            });
+
+            // Add selected class to clicked option
+            element.classList.add('selected');
         }
 
         // Open create team modal
@@ -2964,7 +3175,10 @@
             // Reset form
             document.getElementById('team-name-input').value = '';
             document.getElementById('team-desc-input').value = '';
+            selectedTeamCountry = null;
+            selectedTeamFlag = null;
             selectPrivacy('public');
+            populateTeamCountrySelect();
             openModal('create-team');
         }
 
@@ -3004,16 +3218,38 @@
                 return;
             }
 
-            gameState.team = {
+            if (!selectedTeamCountry) {
+                alert('Please select a country for your team!');
+                return;
+            }
+
+            // Initialize teams array if not exists
+            if (!gameState.teams) {
+                gameState.teams = [];
+            }
+
+            const newTeam = {
                 name: name,
                 description: description,
+                country: selectedTeamCountry,
+                flag: selectedTeamFlag,
                 isPrivate: selectedPrivacy === 'private',
                 code: selectedPrivacy === 'private' ? generatedTeamCode : null
             };
 
+            gameState.teams.push(newTeam);
+            gameState.activeTeamIndex = gameState.teams.length - 1; // Auto-join the new team
+
             saveGame();
             closeModal('create-team');
             openModal('team');
+        }
+
+        // Join team (switch active team)
+        function joinTeam(index) {
+            gameState.activeTeamIndex = index;
+            saveGame();
+            renderTeamContent();
         }
 
         // Join team by code
@@ -3027,14 +3263,24 @@
                 return;
             }
 
+            // Initialize teams array if not exists
+            if (!gameState.teams) {
+                gameState.teams = [];
+            }
+
             // In a real app, this would check against a server
-            // For now, we'll just create a team with that code
-            gameState.team = {
+            // For now, we'll create a team with that code
+            const newTeam = {
                 name: 'Team ' + code,
                 description: 'Joined via code',
+                country: 'Unknown',
+                flag: '🏳️',
                 isPrivate: true,
                 code: code
             };
+
+            gameState.teams.push(newTeam);
+            gameState.activeTeamIndex = gameState.teams.length - 1;
 
             saveGame();
             message.className = 'code-message success';
@@ -3044,15 +3290,6 @@
                 closeModal('join-team');
                 openModal('team');
             }, 1000);
-        }
-
-        // Leave team
-        function leaveTeam() {
-            if (confirm('Are you sure you want to leave this team?')) {
-                gameState.team = null;
-                saveGame();
-                renderTeamContent();
-            }
         }
 
     </script>
